# opex

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/opex/: opex.h
test/: gear.cpp  gear.h  test_accessors.cpp  test_and_select.cpp  test_and_then.cpp  test_call.cpp  test_construct.cpp  test_map.cpp  test_map_err.cpp  test_or_else.cpp  test_or_select.cpp  test_what.cpp
